Removed -g flag in `CFLAGS` variable in `Makefile` in Challenge 14.

--- a/challenge14/Makefile
+++ b/challenge14/Makefile
@@ -1,6 +1,6 @@
 CC		:= gcc
 STDC	:= -std=c11
-CFLAGS	:= $(STDC) -Wall -g
+CFLAGS	:= $(STDC) -Wall
 LDLIBS	:= -lm
 TARGETS	:= sort_performance list_gen check_sorted
 
