Completed redux of Challenge 14. `mergesort()` can now handle up to 10,000,000 doubles! I also got rid of `byte_ops.h` and replaced `byte_cpy()` with C lib's `memcpy()`. Somehow, doing that made `mergesort()` FASTER than `quicksort()` XD.

--- a/challenge14_redux/Makefile
+++ b/challenge14_redux/Makefile
@@ -10,39 +10,27 @@ all: $(TARGETS)
 ###								EXECUTABLES									###
 ###############################################################################
 
-sort_performance: sort_performance.o mergesort.o quicksort.o byte_ops.o time_ops.o
-	$(CC) -o $@ $^ $(LDLIBS)
+sort_performance: sort_performance.o mergesort.o quicksort.o time_ops.o
 
 list_gen: list_gen.o
-	$(CC) -o $@ $^ $(LDLIBS)
 
 check_sorted: check_sorted.o
-	$(CC) -o $@ $^ $(LDLIBS)
 
 ###############################################################################
 ###								OBJECT FILES								###
 ###############################################################################
 
 sort_performance.o: sort_performance.c mergesort.h quicksort.h time_ops.h
-	$(CC) $(CFLAGS) -c $<
 
 list_gen.o: list_gen.c
-	$(CC) $(CFLAGS) -c $<
 
 check_sorted.o: check_sorted.c
-	$(CC) $(CFLAGS) -c $<
 
 mergesort.o: mergesort.c mergesort.h
-	$(CC) $(CFLAGS) -c $<
 
 quicksort.o: quicksort.c quicksort.h
-	$(CC) $(CFLAGS) -c $<
-
-byte_ops.o: byte_ops.c byte_ops.h
-	$(CC) $(CFLAGS) -c $<
 
 time_ops.o: time_ops.c time_ops.h
-	$(CC) $(CFLAGS) -c $<
 
 ############
 ### MISC ###
