--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 !*.*
 !*file
 
-# Object files as a result of make
+# Build files as a result of make
 */*.o
+*/*.d
+*/build/
 
 # Swap files from Vim
 */*.swp
