My sanity's not doin' too hot, bois. I'm on the `HIGH COPIUM` right now porting ALL polynomial and vector functions into complex versions. It reeeaaaallly makes me want to code in C++ more XD.

--- a/challenge13_redux/Makefile
+++ b/challenge13_redux/Makefile
@@ -3,7 +3,7 @@
 ####################################################################################################
 
 # Directory/filename strings
-TARGETS		:= poly_rootfinder test_polynomial
+TARGETS		:= poly_rootfinder test_polynomial testcmplx_poly
 
 BUILD_DIR	:= ./build
 SRC_DIR		:= ./src
@@ -18,7 +18,7 @@ TARGET_OBJS	:= $(TARGETS:%=$(BUILD_DIR)/%.o)
 # Shell strings
 STDC		:= -std=c11
 HARDMODE	:= -Wextra -Werror -pedantic-errors
-DEFINES		:= NDEBUG
+DEFINES		:=
 DEF_FLAGS	:= $(addprefix -D,$(DEFINES))
 INC_FLAGS	:= $(addprefix -I,$(INC_DIRS))
 
