Added a RELEASE build and changed executable name to `textprocessor`.

--- a/challenge12/Makefile
+++ b/challenge12/Makefile
@@ -3,34 +3,37 @@
 ####################################################################################################
 
 # Directory/filename strings
-EXECUTABLE := tblobs
+EXECUTABLE   := textprocessor
 
-BUILD_DIR  := ./build
-SRC_DIR    := ./src
-INC_DIRS   := $(shell find $(SRC_DIR) -type d)
+BUILD_DIR    := ./build
+SRC_DIR      := ./src
+INC_DIRS     := $(shell find $(SRC_DIR) -type d)
 
-SRC_FILES  := $(shell find $(SRC_DIR) -name *.c -or -name *.s)
-OBJ_FILES  := $(SRC_FILES:$(SRC_DIR)/%.c=$(BUILD_DIR)/%.o)
-DEP_FILES  := $(OBJ_FILES:.o=.d)
+SRC_FILES    := $(shell find $(SRC_DIR) -name *.c -or -name *.s)
+OBJ_FILES    := $(SRC_FILES:$(SRC_DIR)/%.c=$(BUILD_DIR)/%.o)
+DEP_FILES    := $(OBJ_FILES:.o=.d)
 
 # Shell strings
-STDC       := c11
-DGBC       := -ggdb
-HARDMODE   := -Wextra -Werror -pedantic-errors
-DEFINES    := #NDEBUG
-DEF_FLAGS  := $(addprefix -D,$(DEFINES))
-INC_FLAGS  := $(addprefix -I,$(INC_DIRS))
+STDC         := c11
+DGBC         := -ggdb
+HARDMODE     := -Wextra -Werror -pedantic-errors
+DEFINES      := #NDEBUG
+DEF_FLAGS    := $(addprefix -D,$(DEFINES))
+INC_FLAGS    := $(addprefix -I,$(INC_DIRS))
 
-DEBUG      := -Wall $(DGBC) $(HARDMODE)
+OPTIMISATION := -O3
 
-RM_R        = $(RM) -r
-DIR_GUARD   = @mkdir -p $(@D)
+DEBUG        := -Wall $(DGBC) $(HARDMODE)
+RELEASE      := -Wall $(OPTIMISATION)
+
+RM_R          = $(RM) -r
+DIR_GUARD     = @mkdir -p $(@D)
 
 # Makefile flags
-CC         := gcc
-CFLAGS     := -std=$(STDC) $(DEBUG)
-CPPFLAGS   := $(DEF_FLAGS) $(INC_FLAGS) -MMD -MP
-LDLIBS     := -lm
+CC           := gcc
+CFLAGS       := -std=$(STDC) $(RELEASE)
+CPPFLAGS     := $(DEF_FLAGS) $(INC_FLAGS) -MMD -MP
+LDLIBS       := -lm
 
 ####################################################################################################
 ####                                        RULES                                               ####
